--- a/AV_spring_MVC/src/main/resources/application.properties
+++ b/AV_spring_MVC/src/main/resources/application.properties
@@ -8,5 +8,11 @@ spring.datasource.password = 123456
 spring.jpa.show-sql = true
 logging.level.org.springframework.web: DEBUG
 logging.level.org.hibernate: ERROR
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+
+logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+logging.level.com.zaxxer.hikari=TRACE
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.connection.release_mode=AFTER_STATEMENT
