--- a/AV_spring_MVC/pom.xml
+++ b/AV_spring_MVC/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
         </dependency>
+<!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20190722</version>
+</dependency>
 
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
