--- a/AV_spring_MVC/src/main/resources/application.properties
+++ b/AV_spring_MVC/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/sys
+spring.datasource.url = jdbc:mysql://localhost:3306/dessertation
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.jpa.show-sql = true
@@ -13,6 +13,12 @@ spring.devtools.livereload.enabled=true
 
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 logging.level.com.zaxxer.hikari=TRACE
+<property name="hibernate.hikari.maximumPoolSize">30</property>
+<property name="hibernate.hikari.idleTimeout">30000</property>
+<property name="hibernate.hikari.dataSource.leakDetectionThreshold">30000</property>   
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.connection.release_mode=AFTER_STATEMENT
+spring.jpa.hibernate.hikari.maximumPoolSize=30
+spring.jpa.hibernate.hikari.idleTimeout=30000
+spring.jpa.hibernate.hikari.leakDetectionThreshold=30000
