--- a/AV_spring_MVC/.project
+++ b/AV_spring_MVC/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AV_spring_MVC</name>
+	<name>VisCraft</name>
 	<comment></comment>
 	<projects>
 	</projects>
