--- a/AV_spring_MVC/src/main/resources/application.properties
+++ b/AV_spring_MVC/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.jpa.properties.hibernate.connection.release_mode=AFTER_STATEMENT
 spring.jpa.hibernate.hikari.maximumPoolSize=30
 spring.jpa.hibernate.hikari.idleTimeout=30000
 spring.jpa.hibernate.hikari.leakDetectionThreshold=30000
+server.error.whitelabel.enabled=false
